# legal_docs_evaluator_agent

./: README.md  ingestion.py  main.py  pyproject.toml
graph/: consts.py  graph.py  state.py
graph/chains/: answer_grader.py  classifier.py  generation.py  hallucination_grader.py  retrieval_grader.py  router.py
graph/chains/tests/: test_chains.py
graph/nodes/: __init__.py  classify.py  generate.py  grade_documents.py  retrieve.py  web_search.py
txt/: Acceptability_criteria.txt  CodeOfConduct.txt  NDA.txt  asset_purchase_agreement.txt  conduct_scenarios.txt
